fixing the space between photos and the "photos" header on mobile size

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00001D;
-	background-color: #8EFE65;
+	color: #00000C;
+	background-color: #5F9EEB;
 }
 
 .js body
@@ -4183,7 +4183,7 @@
 	{
 		z-index: 315;
 		width: 321px;
-		margin-top: 98px;
+		margin-top: 8px;
 	}
 
 	#u20937
